tests/snapshots/snapshot_fixtures__fixtures_cfg__reject__system_macro_feature.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cfg/reject/system_macro_feature.c" (c, x86_64-unknown-linux-gnu)
fn offset_code() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = load %0 : s32i
    return %2
}
