tests/snapshots/snapshot_fixtures__fixtures_cfg__reject__too_many_feature_chains.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.cfg/reject/too_many_feature_chains.c" (c, x86_64-unknown-linux-gnu)
